# numkeys

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  llms.txt
.github/workflows/: ci.yml  release.yml
cli/numkeys-cli/: Cargo.toml
cli/numkeys-cli/src/: config.rs  main.rs
cli/numkeys-cli/src/commands/: attest.rs  info.rs  inspect.rs  keygen.rs  setup_issuer.rs  start.rs  stop.rs  verify.rs
cli/numkeys-cli/tests/: cli_test.rs
crates/numkeys/: Cargo.toml
crates/numkeys-client/: Cargo.toml
crates/numkeys-client/src/: issuer.rs  lib.rs
crates/numkeys-core/: Cargo.toml
crates/numkeys-core/examples/: full_protocol_demo.rs  full_verification_flow.rs  generate_v1_test_vectors.rs  test_direct_phone.rs  test_direct_phone_simple.rs
crates/numkeys-core/src/: issuer_setup.rs  lib.rs  test_direct.rs
crates/numkeys-core/src/attestation/: claims.rs  create.rs  jwt.rs  mod.rs  parse.rs
crates/numkeys-core/src/generator/: algorithm.rs  local.rs  mod.rs
crates/numkeys-core/src/verification/: discovery.rs  mod.rs  verify.rs
crates/numkeys-core/tests/: vectors_test.rs
crates/numkeys-core/tests/fixtures/: v1.json
crates/numkeys-crypto/: Cargo.toml
crates/numkeys-crypto/src/: hashing.rs  lib.rs  nonce.rs  signing.rs
crates/numkeys-types/: Cargo.toml
crates/numkeys-types/src/: attestation.rs  crypto.rs  error.rs  issuer_config.rs  lib.rs  phone.rs  tests.rs
crates/numkeys/src/: lib.rs
docs/: README.md  becoming-an-issuer.md  numkeys-issuer-node-specification.md  numkeys-protocol-specification.md  rpc-api-contract.md  rpc-client-examples.md  sequence-diagrams.md  v1-operational-notes.md  v1-release-scope.md  v1-test-vectors.md  wallet-sdk-spec.md  wallet-spec.md
nodes/issuer-node/: Cargo.toml  README.md
nodes/issuer-node/config/: simple-example.toml  subdomain-example.toml
nodes/issuer-node/src/: config.rs  config_loader.rs  main.rs  state.rs
nodes/issuer-node/src/api/: attest.rs  pubkey.rs
nodes/numkeys-node/: Cargo.toml  README.md
nodes/numkeys-node/src/: main.rs
scripts/: install.sh  smoke-numkeys-node.sh
tests/integration/: full_flow_test.rs  mod.rs
