[workspace]
resolver = "2"
members = [
    "crates/numkeys",
    "crates/numkeys-types",
    "crates/numkeys-crypto",
    "crates/numkeys-core",
    "crates/numkeys-client",
    "nodes/issuer-node",
    "nodes/numkeys-node",
    "cli/numkeys-cli",
]


[workspace.package]
version = "1.1.0-rc.1"
authors = ["NumKeys Protocol Contributors"]
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
repository = "https://github.com/bitnob/numkeys"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"

# JWT
jsonwebtoken = "9.2"

# Configuration
toml = "0.8"

# HTTP
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hex = "0.4"

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
