[package]
name = "numkeys-cli"
version = "0.1.0"
edition = "2021"
authors = ["NumKeys Protocol Contributors"]
description = "Command-line interface for NumKeys Protocol"
license = "Apache-2.0"

[[bin]]
name = "numkeys"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
numkeys-types = { path = "../../crates/numkeys-types" }
numkeys-crypto = { path = "../../crates/numkeys-crypto" }
numkeys-core = { path = "../../crates/numkeys-core" }
numkeys-client = { path = "../../crates/numkeys-client" }

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Terminal output
colored = "2"
dialoguer = "0.11"

# Utilities
dirs = "5"
hex = "0.4"
which = "6"

# Unix-specific (for stop command)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
