[package]
name = "numkeys-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core protocol logic for the NumKeys Protocol"
readme = "../../README.md"
keywords = ["numkeys", "protocol", "attestation", "verification", "privacy"]
categories = ["cryptography", "authentication", "web-programming::http-client"]

[dependencies]
numkeys-types = { version = "1.1.0-rc.1", path = "../numkeys-types" }
numkeys-crypto = { version = "1.1.0-rc.1", path = "../numkeys-crypto" }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
hex = { workspace = true }
base64 = { workspace = true }
regex = "1.10"
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
anyhow = { workspace = true }
