[package]
name = "numkeys-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic operations for the NumKeys Protocol"
readme = "../../README.md"
keywords = ["numkeys", "ed25519", "cryptography", "attestation", "nonce"]
categories = ["cryptography", "authentication"]

[dependencies]
numkeys-types = { version = "0.1.0", path = "../numkeys-types" }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
