[package]
name = "numkeys"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified SDK crate for building with the NumKeys Protocol"
readme = "../../README.md"
keywords = ["numkeys", "protocol", "attestation", "wallet", "issuer"]
categories = ["cryptography", "authentication", "api-bindings"]

[dependencies]
numkeys-types = { version = "1.1.0-rc.1", path = "../numkeys-types" }
numkeys-crypto = { version = "1.1.0-rc.1", path = "../numkeys-crypto" }
numkeys-core = { version = "1.1.0-rc.1", path = "../numkeys-core" }
numkeys-client = { version = "1.1.0-rc.1", path = "../numkeys-client" }
