[package]
name = "issuer-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference issuer node for the NumKeys Protocol"

[[bin]]
name = "issuer-node"
path = "src/main.rs"

[dependencies]
numkeys-types = { path = "../../crates/numkeys-types" }
numkeys-crypto = { path = "../../crates/numkeys-crypto" }
numkeys-core = { path = "../../crates/numkeys-core" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
numkeys-client = { path = "../../crates/numkeys-client" }
reqwest = { workspace = true }